# equation-scraper

./: 404.html  LICENSE.md  README.md  autoRA_debugging.py  autoRA_plotParsedEquations.py  autoRA_plotParsing.py  autoRA_sympyParsing.py  autoRA_sympyParsing_Demo.py  autoRA_webScrapingSearch.py  index.html  mkdocs.yml  pypoject.toml  pyproject.toml  requirements.txt  sympyParsing.py  webScraping_main.py
Data/: debug_parsed_equations_SUPERCognitivePsychology_SUPERCognitiveNeuroscience.txt  debug_parsed_operations_Behavioral_economics.txt  debug_parsed_operations_Psychophysics.txt  operations_Behavioral_economics.txt  operations_Psychophysics.txt  parsed_operationsNamed_Psychophysics.txt  parsed_operations_Behavioral_economics.txt  parsed_operations_Psychophysics.txt  skipped_operations_Behavioral_economics.txt  skipped_operations_Psychophysics.txt
Functions/: plotParsedEquations.py  plotPriors.py  reportPriors.py  sympyParsing.py  sympyParsingDebug.py  webScrapingSearch.py
docs/: index.md
docs/howtouse/: functions.md  install.md  priors.md  usage.md
docs/tutorials/: equation_scraper_tutorial.ipynb
elsevier/: checkpoint.json  scrape.py
elsevier/articles/psychology/: 0.xml
equation_scraper/: __init__.py  webScraping_main.py
equation_scraper/functions/: load.py  parse.py  plot.py  plotPriors.py  scrape.py  scrape_and_parse.py  sympyParsing.py  webScrapingSearch.py
howtouse/functions/: index.html
howtouse/install/: index.html
howtouse/priors/: index.html
howtouse/usage/: index.html
research/hewsonetal2023/: index.html
research/research/: index.html
(+2 files in other folders)
