[project]
name = "equation-scraper"
version = "0.0.1"
authors = [
  { name="Chad Williams", email="chad_williams@brown.edu" },
]
description = "This package scrapes Wikipedia for equations, parses the equations, and builds priors of operations and functions."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "beautifulsoup4~=4.11.2",
  "requests~=2.28.2",
  "sympy~=1.11.1",
  "antlr4-python3-runtime==4.10",
  "equation-tree~=0.0.25",
  "matplotlib~=3.6.3",
  "numpy~=1.24.2",
]

[project.urls]
"Homepage" = "https://musslick.github.io/AER_website/Research.html"
"Repository" = "https://github.com/AutoResearch/equation-scraper"
"Documentation" = "https://autoresearch.github.io/equation-scraper/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"